add "cose da fare" unordered list

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
             <!--fine footer table-->
         </table>
         <!--fine tabella-->
+        <hr>
+        <h2>Cose da fare</h2>
+        <ul>
+            <li>Visitare la Tower of London</li>
+            <li>Visitare greenwich</li>
+            <li>Ascoltare un artista di strada a Covent Garden</li>
+            <li>Mangiare un tipico Fish and Chips inglese</li>
+        </ul>
+        <hr>
     </main>
 
 </body>
