--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <hr>
     </header>
     <main>
+        <section>
         <h2>Le mie spese</h2>
         <!-- Inizio tabella-->
         <table>
@@ -58,6 +59,9 @@
         </table>
         <!--fine tabella-->
         <hr>
+        </section>
+        <section>
+        <!--Inizio Cose da fare unordered list-->
         <h2>Cose da fare</h2>
         <ul>
             <li>Visitare la Tower of London</li>
@@ -65,7 +69,36 @@
             <li>Ascoltare un artista di strada a Covent Garden</li>
             <li>Mangiare un tipico Fish and Chips inglese</li>
         </ul>
+        <!--fine cose da fare ul-->
         <hr>
+        </section>
+        <section>
+        <!--Inizio info utili ol-->
+        <h2>Info utili</h2>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                    <li><strong>indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr>
+        </section>
+        <!--fine info utili ol-->
     </main>
 
 </body>
